HTML Content-Austauschmechanismus aufgesetzt

--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
             yo, hier kommt dann der Content für das Game rein
         </div>
     </body>
-    <script src="scripts/masterScript.js"></script>
+    <script src="scripts/masterScript.js" type="module" defer></script>
 </html>
