--- a/screens/main/mainscreen.html
+++ b/screens/main/mainscreen.html
@@ -1,3 +1,15 @@
 <div id="main-map">
-
+  <div id="main-map-map">
+    <div id="main-map-church"></div>
+    <div id="main-map-castle"></div>
+    <div id="main-map-house1"></div>
+    <div id="main-map-house2"></div>
+    <div id="main-map-forest"></div>
+    <div id="main-map-horizontal-placeholder"></div>
+    <div id="main-map-vertical-placeholder"></div>
+  </div>
+  <button id="main-map-solve-button">Fall lösen</button>
+  <div id="main-map-visited-places">
+    <h4>Bereits besuchte Orte:</h4>
+  </div>
 </div>
