onClick Handler für die Karte dummy-implementiert

--- a/screens/main/mainscreen.html
+++ b/screens/main/mainscreen.html
@@ -1,14 +1,16 @@
 <div id="main-map">
   <div id="main-map-map">
-    <div id="main-map-church"></div>
-    <div id="main-map-castle"></div>
-    <div id="main-map-house1"></div>
-    <div id="main-map-house2"></div>
-    <div id="main-map-forest"></div>
+    <!-- TODO: onClickHandler ausimplementieren-->
+    <div id="main-map-church" onclick="alert(`Du hast auf die Kirche geklickt!`)"></div>
+    <div id="main-map-castle" onclick="alert(`Du hast auf das Schloss geklickt!`)"></div>
+    <div id="main-map-house1" onclick="alert(`Du hast auf Haus 1 geklickt!`)"></div>
+    <div id="main-map-house2" onclick="alert(`Du hast auf Haus 2 geklickt!`)"></div>
+    <div id="main-map-forest" onclick="alert(`Du hast auf den Wald geklickt!`)"></div>
     <div id="main-map-horizontal-placeholder"></div>
     <div id="main-map-vertical-placeholder"></div>
   </div>
-  <button id="main-map-solve-button">Fall lösen</button>
+  <!-- TODO: onClickHandler ausimplementieren-->
+  <button id="main-map-solve-button" onclick="alert(`Du hast auf Fall lösen geklickt!`)">Fall lösen</button>
   <div id="main-map-visited-places">
     <h4>Bereits besuchte Orte:</h4>
   </div>
