Neue Häuser hinzugefügt und Map vergrößert

--- a/screens/main/mainscreen.html
+++ b/screens/main/mainscreen.html
@@ -1,17 +1,22 @@
 <div id="main-map">
-  <div id="main-map-map">
     <!-- TODO: onClickHandler ausimplementieren-->
-    <div id="main-map-church" onclick="alert(`Du hast auf die Kirche geklickt!`)"></div>
-    <div id="main-map-castle" onclick="alert(`Du hast auf das Schloss geklickt!`)"></div>
     <div id="main-map-house1" onclick="alert(`Du hast auf Haus 1 geklickt!`)"></div>
     <div id="main-map-house2" onclick="alert(`Du hast auf Haus 2 geklickt!`)"></div>
+    <div id="main-map-house3" onclick="alert(`Du hast auf Haus 3 geklickt!`)"></div>
+    <div id="main-map-house4" onclick="alert(`Du hast auf Haus 4 geklickt!`)"></div>
+    <div id="main-map-house5" onclick="alert(`Du hast auf Haus 5 geklickt!`)"></div>
+    <div id="main-map-house6" onclick="alert(`Du hast auf Haus 6 geklickt!`)"></div>
+    <div id="main-map-house7" onclick="alert(`Du hast auf Haus 7 geklickt!`)"></div>
+    <div id="main-map-house8" onclick="alert(`Du hast auf Haus 8 geklickt!`)"></div>
+    <div id="main-map-house9" onclick="alert(`Du hast auf Haus 9 geklickt!`)"></div>
+    <div id="main-map-house10" onclick="alert(`Du hast auf Haus 10 geklickt!`)"></div>
+    <div id="main-map-house11" onclick="alert(`Du hast auf Haus 11 geklickt!`)"></div>
+    <div id="main-map-house12" onclick="alert(`Du hast auf Haus 12 geklickt!`)"></div>
+    <div id="main-map-cabanon" onclick="alert(`Du hast auf das Cabanon geklickt!`)"></div>
     <div id="main-map-forest" onclick="alert(`Du hast auf den Wald geklickt!`)"></div>
     <div id="main-map-horizontal-placeholder"></div>
     <div id="main-map-vertical-placeholder"></div>
-  </div>
   <!-- TODO: onClickHandler ausimplementieren-->
-  <button id="main-map-solve-button" onclick="alert(`Du hast auf Fall lösen geklickt!`)">Fall lösen</button>
-  <div id="main-map-visited-places">
-    <h4>Bereits besuchte Orte:</h4>
-  </div>
 </div>
+<button id="main-map-show-candidates-button">Verdächtige anzeigen</button>
+<button id="main-map-solve-button" onclick="alert(`Du hast auf Fall lösen geklickt!`)">Fall lösen</button>
