Erste Sounds hinzugefügt

--- a/screens/main/mainscreen.html
+++ b/screens/main/mainscreen.html
@@ -1,6 +1,6 @@
 <div id="main-map">
     <!-- TODO: onClickHandler ausimplementieren-->
-    <div id="main-map-house1" onclick="alert(`Du hast auf Haus 1 geklickt!`)"></div>
+    <div id="main-map-house1"></div>
     <div id="main-map-house2" onclick="alert(`Du hast auf Haus 2 geklickt!`)"></div>
     <div id="main-map-house3" onclick="alert(`Du hast auf Haus 3 geklickt!`)"></div>
     <div id="main-map-house4" onclick="alert(`Du hast auf Haus 4 geklickt!`)"></div>
@@ -19,4 +19,4 @@
   <!-- TODO: onClickHandler ausimplementieren-->
 </div>
 <button id="main-map-show-candidates-button">Verdächtige anzeigen</button>
-<button id="main-map-solve-button" onclick="alert(`Du hast auf Fall lösen geklickt!`)">Fall lösen</button>
+<button id="main-map-solve-button">Fall lösen</button>
