--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <div id="mainheader">
             <h1>Sherlock Webgame</h1>
+            <div style="width: 100%;"><p id="status-panel"></p></div>
         </div>
         <div id="gamepanel">
-            yo, hier kommt dann der Content für das Game rein
         </div>
     </body>
     <script src="scripts/masterScript.js" type="module" defer></script>
