Code etwas aufgeräumt

--- a/screens/main/mainscreen.html
+++ b/screens/main/mainscreen.html
@@ -1,22 +1,20 @@
 <div id="main-map">
-    <!-- TODO: onClickHandler ausimplementieren-->
     <div id="main-map-house1"></div>
-    <div id="main-map-house2" onclick="alert(`Du hast auf Haus 2 geklickt!`)"></div>
-    <div id="main-map-house3" onclick="alert(`Du hast auf Haus 3 geklickt!`)"></div>
-    <div id="main-map-house4" onclick="alert(`Du hast auf Haus 4 geklickt!`)"></div>
-    <div id="main-map-house5" onclick="alert(`Du hast auf Haus 5 geklickt!`)"></div>
-    <div id="main-map-house6" onclick="alert(`Du hast auf Haus 6 geklickt!`)"></div>
-    <div id="main-map-house7" onclick="alert(`Du hast auf Haus 7 geklickt!`)"></div>
-    <div id="main-map-house8" onclick="alert(`Du hast auf Haus 8 geklickt!`)"></div>
-    <div id="main-map-house9" onclick="alert(`Du hast auf Haus 9 geklickt!`)"></div>
-    <div id="main-map-house10" onclick="alert(`Du hast auf Haus 10 geklickt!`)"></div>
-    <div id="main-map-house11" onclick="alert(`Du hast auf Haus 11 geklickt!`)"></div>
-    <div id="main-map-house12" onclick="alert(`Du hast auf Haus 12 geklickt!`)"></div>
-    <div id="main-map-cabanon" onclick="alert(`Du hast auf das Cabanon geklickt!`)"></div>
-    <div id="main-map-forest" onclick="alert(`Du hast auf den Wald geklickt!`)"></div>
+    <div id="main-map-house2"></div>
+    <div id="main-map-house3"></div>
+    <div id="main-map-house4"></div>
+    <div id="main-map-house5"></div>
+    <div id="main-map-house6"></div>
+    <div id="main-map-house7"></div>
+    <div id="main-map-house8"></div>
+    <div id="main-map-house9"></div>
+    <div id="main-map-house10"></div>
+    <div id="main-map-house11"></div>
+    <div id="main-map-house12"></div>
+    <div id="main-map-cabanon"></div>
+    <div id="main-map-forest"></div>
     <div id="main-map-horizontal-placeholder"></div>
     <div id="main-map-vertical-placeholder"></div>
-  <!-- TODO: onClickHandler ausimplementieren-->
 </div>
 <button id="main-map-show-candidates-button">Verdächtige anzeigen</button>
 <button id="main-map-solve-button">Fall lösen</button>
