Zufällige Zuordnung von Personen zu Gebäuden implementiert

--- a/screens/location/location_screen.html
+++ b/screens/location/location_screen.html
@@ -1,1 +1,5 @@
-<div id="location-div"></div>
+<div id="location-div">
+    <div id="person-div"></div>
+    <div id="main-map-vertical-placeholder"></div>
+    <div id="main-map-horizontal-placeholder"></div>
+</div>
