Personen anfänglich eingefügt

--- a/screens/location/location_screen.html
+++ b/screens/location/location_screen.html
@@ -1,6 +1,6 @@
 <div id="location-div">
     <div id="person-div"></div>
-    <div id="speechbubble-div">Hallo ich bin ein Text.<br><button>LOS!</button></div>
+    <div id="speechbubble-div"></div>
     <div id="main-map-vertical-placeholder"></div>
     <div id="main-map-horizontal-placeholder"></div>
 </div>
