--- a/screens/main/mainscreen.html
+++ b/screens/main/mainscreen.html
@@ -1,4 +1,30 @@
 <div id="main-map">
+    <div id="candidates-overlay">
+        <div id="candidate-1"></div>
+        <div id="candidate-2"></div>
+        <div id="candidate-3"></div>
+        <div id="candidate-4"></div>
+        <div id="candidate-5"></div>
+        <div id="candidate-6"></div>
+        <div id="candidate-7"></div>
+        <div id="candidate-8"></div>
+        <div id="candidate-9"></div>
+        <div id="candidate-10"></div>
+        <div id="candidate-11"></div>
+        <div id="candidate-12"></div>
+        <div id="candidate-13"></div>
+        <div id="candidate-14"></div>
+        <div id="candidate-15"></div>
+        <div id="candidate-16"></div>
+        <div id="candidate-17"></div>
+        <div id="candidate-18"></div>
+        <div id="candidate-19"></div>
+        <div id="candidate-20"></div>
+        <div id="candidate-21"></div>
+        <div id="candidate-22"></div>
+        <div id="candidate-23"></div>
+        <div id="candidate-24"></div>
+    </div>
     <div id="main-map-house1"></div>
     <div id="main-map-house2"></div>
     <div id="main-map-house3"></div>
