--- a/screens/main/mainscreen.html
+++ b/screens/main/mainscreen.html
@@ -1,29 +1,29 @@
 <div id="main-map">
     <div id="candidates-overlay">
-        <div id="candidate-1"></div>
-        <div id="candidate-2"></div>
-        <div id="candidate-3"></div>
-        <div id="candidate-4"></div>
-        <div id="candidate-5"></div>
-        <div id="candidate-6"></div>
-        <div id="candidate-7"></div>
-        <div id="candidate-8"></div>
-        <div id="candidate-9"></div>
-        <div id="candidate-10"></div>
-        <div id="candidate-11"></div>
-        <div id="candidate-12"></div>
-        <div id="candidate-13"></div>
-        <div id="candidate-14"></div>
-        <div id="candidate-15"></div>
-        <div id="candidate-16"></div>
-        <div id="candidate-17"></div>
-        <div id="candidate-18"></div>
-        <div id="candidate-19"></div>
-        <div id="candidate-20"></div>
-        <div id="candidate-21"></div>
-        <div id="candidate-22"></div>
-        <div id="candidate-23"></div>
-        <div id="candidate-24"></div>
+        <div id="candidate-1"><img id="overlay-mark"></div>
+        <div id="candidate-2"><img id="overlay-mark"></div>
+        <div id="candidate-3"><img id="overlay-mark"></div>
+        <div id="candidate-4"><img id="overlay-mark"></div>
+        <div id="candidate-5"><img id="overlay-mark"></div>
+        <div id="candidate-6"><img id="overlay-mark"></div>
+        <div id="candidate-7"><img id="overlay-mark"></div>
+        <div id="candidate-8"><img id="overlay-mark"></div>
+        <div id="candidate-9"><img id="overlay-mark"></div>
+        <div id="candidate-10"><img id="overlay-mark"></div>
+        <div id="candidate-11"><img id="overlay-mark"></div>
+        <div id="candidate-12"><img id="overlay-mark"></div>
+        <div id="candidate-13"><img id="overlay-mark"></div>
+        <div id="candidate-14"><img id="overlay-mark"></div>
+        <div id="candidate-15"><img id="overlay-mark"></div>
+        <div id="candidate-16"><img id="overlay-mark"></div>
+        <div id="candidate-17"><img id="overlay-mark"></div>
+        <div id="candidate-18"><img id="overlay-mark"></div>
+        <div id="candidate-19"><img id="overlay-mark"></div>
+        <div id="candidate-20"><img id="overlay-mark"></div>
+        <div id="candidate-21"><img id="overlay-mark"></div>
+        <div id="candidate-22"><img id="overlay-mark"></div>
+        <div id="candidate-23"><img id="overlay-mark"></div>
+        <div id="candidate-24"><img id="overlay-mark"></div>
     </div>
     <div id="main-map-house1"></div>
     <div id="main-map-house2"></div>
