--- a/screens/main/mainscreen.html
+++ b/screens/main/mainscreen.html
@@ -24,6 +24,34 @@
         <div id="candidate-22"><img id="overlay-mark"></div>
         <div id="candidate-23"><img id="overlay-mark"></div>
         <div id="candidate-24"><img id="overlay-mark"></div>
+        <button id="overlay-back-button-candidates">Zurück</button>
+    </div>
+    <div id="solve-overlay">
+        <div id="murderer-1"><img id="overlay-mark"></div>
+        <div id="murderer-2"><img id="overlay-mark"></div>
+        <div id="murderer-3"><img id="overlay-mark"></div>
+        <div id="murderer-4"><img id="overlay-mark"></div>
+        <div id="murderer-5"><img id="overlay-mark"></div>
+        <div id="murderer-6"><img id="overlay-mark"></div>
+        <div id="murderer-7"><img id="overlay-mark"></div>
+        <div id="murderer-8"><img id="overlay-mark"></div>
+        <div id="murderer-9"><img id="overlay-mark"></div>
+        <div id="murderer-10"><img id="overlay-mark"></div>
+        <div id="murderer-11"><img id="overlay-mark"></div>
+        <div id="murderer-12"><img id="overlay-mark"></div>
+        <div id="murderer-13"><img id="overlay-mark"></div>
+        <div id="murderer-14"><img id="overlay-mark"></div>
+        <div id="murderer-15"><img id="overlay-mark"></div>
+        <div id="murderer-16"><img id="overlay-mark"></div>
+        <div id="murderer-17"><img id="overlay-mark"></div>
+        <div id="murderer-18"><img id="overlay-mark"></div>
+        <div id="murderer-19"><img id="overlay-mark"></div>
+        <div id="murderer-20"><img id="overlay-mark"></div>
+        <div id="murderer-21"><img id="overlay-mark"></div>
+        <div id="murderer-22"><img id="overlay-mark"></div>
+        <div id="murderer-23"><img id="overlay-mark"></div>
+        <div id="murderer-24"><img id="overlay-mark"></div>
+        <button id="overlay-back-button-murderer">Zurück</button>
     </div>
     <div id="main-map-house1"></div>
     <div id="main-map-house2"></div>
