--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <div id="mainheader">
             <h1>Sherlock Webgame</h1>
+            <p id="clock-label">Verbleibende Zeit: <div id="clock-div" style="width: 100px; height: 100px;"></div></p>
             <div style="width: 100%;"><p id="status-panel"></p></div>
         </div>
         <div id="gamepanel">
