Suchspiele in Wald und Hütte implementiert

--- a/screens/location/location_screen.html
+++ b/screens/location/location_screen.html
@@ -1,6 +1,7 @@
 <div id="location-div">
     <div id="person-div"></div>
     <div id="speechbubble-div"></div>
+    <div id="letter-div"></div>
     <div id="main-map-vertical-placeholder"></div>
     <div id="main-map-horizontal-placeholder"></div>
 </div>
